# robotnix

./: default.nix  flake.nix
flavors/lineageos/: default.nix  device-metadata.json  repo-metadata.json
modules/: envpackages.nix  notifications.nix  source.nix  vibration-pattern-patch-template.patch
updater/: Cargo.toml
updater/src/: base.rs  lineage.rs  main.rs  repo_lockfile.rs  repo_manifest.rs
