[package]
name = "robotnix-updater"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clap = { version = "4.5.32", features = ["derive"] }
atomic-write-file = "0.2.3"
git2 = "0.20.1"
quick-xml = { version = "0.37.2", features = ["serialize"] }
reqwest = { version = "0.12.15", features = ["blocking"] }
